--- a/style.css
+++ b/style.css
@@ -10,25 +10,59 @@ header img {
     position: relative;
     object-fit: cover;
 }
-header h1 {
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    color: white;
+.header-title {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
+
+.header-title h1 {
+  font-family: 'Anton', sans-serif;
+  color: white;
+  font-size: 24px;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.circle-icon {
+  position: relative;
+  width: 16px;
+  height: 16px;
+}
+
+.circle-icon .outer {
+  font-size: 16px;
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.circle-icon .inner {
+  font-size: 8px;
+  color: white;
+  position: absolute;
+  top: 4px; /* center it */
+  left: 4px;
+}
+
 header p {
     position: absolute;
     font-size: 44px;
     color: #ffd15d;
     top: 40%;
-    left: 14%;
+    left: 25%;
     margin: 0;
+    font-family: 'Anton',sans-serif;
 }
 .searchbar {
   position: absolute;
   bottom: 35%;
   left: 16%;
-  width: 75%;
+  width: 70%;
   display: flex;
   align-items: center;
   position: absolute;
@@ -36,7 +70,7 @@ header p {
 
 #main-search {
   width: 100%;
-  height: 35px;
+  height: 50px;
   border-radius: 10px;
   padding-left: 15px;
   padding-right: 70px; /* reserve space for icons */
@@ -71,12 +105,26 @@ header p {
   display: none;
 }
 
+#top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: lightgray;
+}
+
+#recipe-count {
+  font-size: 18px;
+  font-weight: bold;
+  color: #1b1b1b;
+}
 
 #filters {
     display: flex;
     padding: 20px;
     gap: 15%;
     background-color: lightgray;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
 }
 /* DROPDOWN CONTAINER */
 .dropdown {
@@ -89,7 +137,7 @@ header p {
 .dropdown-toggle {
   width: 160px;
   height: 40px;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
   padding: 0.6rem 1rem;
   background-color: #f5f5f5;
@@ -236,7 +284,7 @@ h3 {
 }
 .ingredients-grid {
     display: grid;
-    grid-template-columns: 100px 100px;
+    grid-template-columns: 190px 190px;
     padding: 15px;
     margin: 0;
 }
