--- a/style.css
+++ b/style.css
@@ -4,10 +4,13 @@ body p  {
 h1 h2 h3 {
     font-family: 'Anton', sans-serif;
 }
+header {
+    position: relative;
+}
+ 
 header img {
     width: 100%;
     height: 660px;
-    position: relative;
     object-fit: cover;
 }
 .header-title {
@@ -53,10 +56,11 @@ header p {
     position: absolute;
     font-size: 44px;
     color: #ffd15d;
-    top: 40%;
-    left: 25%;
+    top: 34%;
     margin: 0;
     font-family: 'Anton',sans-serif;
+    text-align: center;
+    width: 100%;
 }
 .searchbar {
   position: absolute;
@@ -135,8 +139,8 @@ header p {
 
 /* DROPDOWN TOGGLE BUTTON */
 .dropdown-toggle {
-  width: 160px;
-  height: 40px;
+  width: 179px;
+  height: 56px;
   border-radius: 10px;
   cursor: pointer;
   padding: 0.6rem 1rem;
@@ -235,9 +239,42 @@ header p {
   font-size: 18px;
   display: none;
 }
+/* Selected tag container */
+#selected-tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin:0;
+  padding: 10px;
+  background-color: lightgray;
+}
 
+/* Tag style */
+.tag {
+  background-color: #ffd15b;
+  color: #000;
+  padding: 20px 20px;
+  border-radius: 15px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-weight: 500;
+}
 
+/* Tag remove (❌) style */
+.tag-remove {
+  font-weight: bold;
+  font-size: 16px;
+  color: #000;
+  cursor: pointer;
+}
 
+/* Highlighted text in dropdown filters */
+.highlight {
+  background-color: yellow;
+  font-weight: bold;
+}
 .recipie-card img {
     width: 340px;
     height: 253px;
