--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ header p {
   font-weight: 500;
 }
 
-/* Tag remove (❌) style */
+/* Tag remove  style */
 .tag-remove {
   font-weight: bold;
   font-size: 16px;
